# ai-travel-advisor

./: .gitignore  ARCHITECTURE.md  README.md  dev-setup.sh  docker-compose.yml  env.example
backend/: .gitignore  Dockerfile  env.example  init_db.py  pyproject.toml
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/api/v1/: __init__.py  agent.py  auth.py  destinations.py  knowledge.py  ops.py  users.py
backend/app/core/: cache.py  database.py  exceptions.py  limiter.py  pgvector.py  security.py  settings.py
backend/app/fixtures/: currency.json  events.json  flights.json  lodging.json
backend/app/middleware/: __init__.py  idempotent.py
backend/app/middleware/kvstorage/: __init__.py  base.py  memory.py  redis.py
backend/app/models/: __init__.py  agent_run.py  destination.py  embedding.py  itinerary.py  knowledge_base.py  organization.py  refresh_token.py  user.py
backend/app/repositories/: destination.py  knowledge_base.py  organization.py  refresh_token.py  user.py
backend/app/schemas/: agent.py  agent_graph.py  ai_chat.py  auth.py  destination.py  knowledge_base.py  tools.py
backend/app/services/: agent.py  auth.py  destination.py  knowledge.py  ops.py  tools.py
backend/certs/: private_key.pem  public_key.pem
backend/kb_docs/: best_places_in_kyoto.md
backend/migrations/: env.py
backend/migrations/versions/: 06ba244489ee_add_title_to_embeddings.py  14d5d6cdae7a_add_user_id_to_existing_tbls.py  2c594dbc7713_add_password_hash_to_users.py  3491b989dccd_set_fkey_ondelete.py  4996df7ff89d_set_cascade.py  49c8bdb54d66_remove_username.py  625753cf7cf8_add_agentic_infra.py  9b66a7151440_remove_locked_tbls.py  bd5f339701a1_change_default_to_uuid.py  be8fbd1fa663_remove_kb_fields.py  e16ed40ae7f1_change_ids_to_uuid.py
backend/scripts/: prestart.sh  seed.py
frontend/: .dockerignore  Dockerfile  README.md  app.py  main.py  pyproject.toml
frontend/pages/: ai_chat.py  auth.py  destinations.py  knowledge_base.py  plan.py
frontend/utils/: api_client.py
